	 in the 'competition mode' entry (works much better on Solaris).
20030902 THANKS: Add Ivan Ruiz Etxabe and David Muriel.
20030902 ChangeLog: bring up to date.
20030902 AUTHORS: Add Matthew Westcott.
20030903 ui/scaler/scalers.c: small fix to 2xSaI scaler (Fred/ScummVM team).
20030903 ui/gtk/binary.c: add padding around widgets
20030905 ui/gtk/binary.c: call save_data not load_data when saving binary
         data. Add padding around the save binary data dialog widgets.
20030905 debugger/expression.c: get brackets right when deparsing
         expressions.
20030908 dck.c: use Timex dock capability in dck_read
20030912 ChangeLog, README, man/fuse.1: documentation updates for the
         0.6.1 release (Release-0_6_1-branch)
20030912 man/fuse.1: fix typo in BUGS section (for -> from). Mention 16K
	 Spectrum as being available when changing machine.
	 (Release-0_6_1-branch)
20030913 Makefile.am: distribute compat.h (Release-0_6_1-branch)
20030913 Merge all changes except the different DSA key from
	 Release-0_6_1-branch onto HEAD.
20030913 lib/Makefile.am: distribute disk_plus3.z80 (Release-0_6_1-branch)
20030913 Merge the above change back onto HEAD.
20030918 settings.dat, ui/options.dat, ui/sdl/sdldisplay.c: B&W TV mode (Fred).
20030918 ui/gtk/gtkdisplay.c, ui/gtk/options.pl: B&W TV mode for the GTK+ UI.
20030919 configure.in: no longer need to explicitly link against gcrypt.
20030919 Makefile.am, configure.in, ui/Makefile.am: step into only the UI
	 directory for the one we're actually building (similarly for the
	 widget directory).
20030919 ui/gtk/gtkdisplay.c, ui/sdl/sdldisplay.c: get greyscale values
	 via 0.299r+0.587g+0.114b rather than 0.333r+0.333g+0.333b.
20030919 rzx.c: prevent RZX recording being stopped twice under widget UIs.
20030919 rzx.c: make sure an RZX file is allocated when we try and do
	 anything with it.
20030919 rzx.c: count the 'expected time' in 1/50ths of a second, rather
	 than repeated adds of 0.02; avoids rounding errors.