@@ -208,3 +208,5 @@
 	 anything with it.
 20030919 rzx.c: count the 'expected time' in 1/50ths of a second, rather
 	 than repeated adds of 0.02; avoids rounding errors.
+20030922 rzx.c: start timing measurements after a 1s delay to avoid
+         transients.
